# SlicerCore

./: .gitignore  README.md  apply_patch.py  common.py  generate_patch.py  set_vtk_version.py
.github/workflows/: build-wheels-mac.yml  build-wheels.yml  cd.yml  ci.yml
patch/: CMakeLists.txt  README.md
patch/Base/Logic/: CMakeLists.txt  vtk.module
patch/Base/Logic/Resources/: CMakeLists.txt
patch/Libs/MRML/CLI/: CMakeLists.txt  vtk.module
patch/Libs/MRML/Core/: CMakeLists.txt  vtk.module
patch/Libs/MRML/DisplayableManager/: CMakeLists.txt  vtk.module
patch/Libs/MRML/Logic/: CMakeLists.txt  vtk.module
patch/Libs/RemoteIO/: CMakeLists.txt  vtk.module
patch/Libs/vtkITK/: CMakeLists.txt  vtk.module
patch/Libs/vtkSegmentationCore/: CMakeLists.txt  vtk.module
patch/Libs/vtkTeem/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Annotations/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Annotations/MRML/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Cameras/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Colors/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Colors/MRML/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Colors/MRMLDM/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Colors/VTKWidgets/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/CropVolume/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/CropVolume/MRML/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Data/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Markups/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Markups/MRML/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Markups/MRMLDM/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Markups/VTKWidgets/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Models/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Plots/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Reformat/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/SceneViews/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Segmentations/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Segmentations/MRML/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Segmentations/MRMLDM/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Sequences/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Sequences/MRML/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/SubjectHierarchy/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Tables/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Terminologies/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Texts/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Transforms/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Transforms/MRMLDM/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/Units/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/ViewControllers/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/VolumeRendering/Logic/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/VolumeRendering/MRML/: CMakeLists.txt  vtk.module
patch/Modules/Loadable/VolumeRendering/MRMLDM/: CMakeLists.txt  vtk.module  vtkMRMLVolumeRenderingDisplayableManager.cxx.patch
patch/Modules/Loadable/Volumes/Logic/: CMakeLists.txt  vtk.module
patch/SlicerCore/: README.md  generate_patch.py  howto.md  pyproject.toml  pytest.toml
patch/SlicerCore/CMake/: SlicerCoreModuleWrapper.cmake  SlicerCoreSuperbuild.cmake
patch/SlicerCore/Python/slicer/: __init__.py  slicer_core.py
patch/SlicerCore/tests/: conftest.py  test_build_module.py  test_find_package.py  test_import.py  venv.py
patch/SlicerCoreSDK/: pyproject.toml
patch/SuperBuild/: External_DCMTK.cmake  External_ITK.cmake  External_LibArchive.cmake  External_SlicerExecutionModel.cmake  External_VTK.cmake  External_curl.cmake  External_tbb.cmake  External_teem.cmake  External_vtkAddon.cmake
