[build-system]
requires = [
  "scikit-build-core",
  "vtk-sdk==9.6.0",
  "vtk-sdk-python-wheel-helper"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "../wheelbuild"
cmake.source-dir = ".."
cmake.args = ["-GNinja", "-DCMAKE_BUILD_TYPE=Release", "-DBUILD_SDK=ON"]

[project]
name = "slicer-core-sdk"
version = "5.11.0.1"
dependencies = ["vtk==9.6.0"]
description = "3DSlicer Core libraries as a python standalone project"
authors = [
  { name = "Alexy Pellegrini", email = "alexy.pellegrini@kitware.com" }
]
requires-python = ">=3.10"
license = { text = "Apache 2.0 License" }
[project.optional-dependencies]
test = [
    "pytest",
    "virtualenv"
]

[project.entry-points."cmake.prefix"]
SlicerCore = "slicer_core_sdk.cmake"
